--- a/influencer.html
+++ b/influencer.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer</title>
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/487b0b5576.js" crossorigin="anonymous"></script>
+    <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -17,21 +20,172 @@
 
 <body>
     <main>
+        <!-- first section  -->
+        <h2><b>Influencer Products
+            </b></h2>
         <section>
-            <div class="width">
-                <h3><b>Influencer Products
-                    </b></h3>
-                <h1><b>
-                        Start Your Journey As Influencer
-                    </b></h1>
-                <p>In 2022 Its very important to be an influencer.Its will make your personal Branding.In 2022 Its very
-                    important to be an influencer.Its will make your personal Branding</p>
-                <a class="link-button" target="_blank"
-                    href="https://www.facebook.com/profile.php?id=100073644403755">Preebok Now</a>
+            <div>
+                <div class="width">
+                    <h1><b>
+                            Start Your Journey As Influencer
+                        </b></h1>
+                    <p>In 2022 Its very important to be an influencer.Its will make your personal Branding.In 2022 Its
+                        very
+                        important to be an influencer.Its will make your personal Branding</p>
+                    <a class="link-button" target="_blank"
+                        href="https://www.facebook.com/profile.php?id=100073644403755">Preebok Now <i
+                            class="fas fa-arrow-right"></i></a>
+                </div>
+
             </div>
             <div class="width">
                 <img src="images/main-camera.png" alt="">
             </div>
+        </section>
+        <!-- second section  -->
+        <h2 class="section-title">Popular Collection</h2>
+        <section class="container">
+            <div class="products">
+                <article class="product">
+                    <div class="product-banner">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="product-deteil">
+                        <h3 class="product-title">Flex Tripod</h3>
+                        <h4>$50.00</h4>
+                        <p>most affordable action cam</p>
+                    </div>
+                    <div class="product-info">
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <p class="rating">4.5</p>
+                    </div>
+
+                </article>
+                <article class="product">
+                    <div class="product-banner">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="product-deteil">
+                        <h3 class="product-title">Airpod</h3>
+                        <h4>$50.00</h4>
+                        <p>most affordable action cam</p>
+                    </div>
+                    <div class="product-info">
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <p class="rating">4.5</p>
+                    </div>
+
+                </article>
+                <article class="product">
+                    <div class="product-banner">
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <div class="product-deteil">
+                        <h3 class="product-title">Camera</h3>
+                        <h4>$50.00</h4>
+                        <p>most affordable action cam</p>
+                    </div>
+                    <div class="product-info">
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <p class="rating">4.5</p>
+                    </div>
+
+                </article>
+                <article class="product">
+                    <div class="product-banner">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="product-deteil">
+                        <h3 class="product-title">Drone</h3>
+                        <h4>$50.00</h4>
+                        <p>most affordable action cam</p>
+                    </div>
+                    <div class="product-info">
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <p class="rating">4.5</p>
+                    </div>
+
+                </article>
+                <article class="product">
+                    <div class="product-banner">
+                        <img src="images/gear.png" alt="">
+                    </div>
+                    <div class="product-deteil">
+                        <h3 class="product-title">Gears</h3>
+                        <h4>$50.00</h4>
+                        <p>most affordable action cam</p>
+                    </div>
+                    <div class="product-info">
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <p class="rating">4.5</p>
+                    </div>
+
+                </article>
+                <article class="product">
+                    <div class="product-banner">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="product-deteil">
+                        <h3 class="product-title">Lights</h3>
+                        <h4>$50.00</h4>
+                        <p>most affordable action cam</p>
+                    </div>
+                    <div class="product-info">
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <div><i class="fas fa-star"></i></div>
+                        <p class="rating">4.5</p>
+                    </div>
+
+                </article>
+                <a target="_blank" href="https://www.facebook.com/profile.php?id=100073644403755">Preebok Now <i
+                        class="fas fa-arrow-right"></i></a>
+
+            </div>
+
+        </section>
+        <section class="Third">
+            <img src="logo.png" alt="">
+            <h2>Infuencer Worlds</h2><br>
+            <p>In 2022 Influence skills are very very importants.In 2022 Influence skills are very very importants.In
+                2022 Influence skills are very very importants</p>
+            <a class="link-button" target="_blank"
+                href="https://www.facebook.com/profile.php?id=100073644403755">Preebok Now <i
+                    class="fas fa-arrow-right"></i></a>
+        </section>
+        <section>
+            <footer>
+                <h2>Influencer Products</h2>
+                <p>
+                    copyright <i class="far fa-copyright"></i> 2022 Infulencer Products <br>All Right Reserved
+                </p>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-twitter"></i>
+            </footer>
         </section>
     </main>
 
