--- a/influencer.html
+++ b/influencer.html
@@ -23,7 +23,7 @@
         <!-- first section  -->
         <h2><b>Influencer Products
             </b></h2>
-        <section>
+        <section class="first-part">
             <div>
                 <div class="width">
                     <h1><b>
